Fix label input not covering the whole radio-group

--- a/packages/browser/style.css
+++ b/packages/browser/style.css
@@ -83,7 +83,6 @@ body {
   box-shadow: 0 5px 0 var(--secondary-color);
   border: 1px solid var(--secondary-color);
   color: var(--secondary-color);
-  padding: 10px 20px;
   border-radius: var(--border-radius);
   transition: all 0.3s ease-in-out;
 }
@@ -96,6 +95,11 @@ body {
   color: var(--primary-color);
   transform: translateY(5px);
   opacity: 1;
+}
+
+.radio-group label {
+  display: inline-block;
+  padding: 10px 20px;
 }
 
 .radio-group input {
